--- a/plugins/react-convention-route/package.json
+++ b/plugins/react-convention-route/package.json
@@ -1,7 +1,24 @@
 {
   "name": "react-convention-route",
   "version": "1.0.0",
+  "main": "dist/index.js",
+  "module": "dist/index.mjs",
+  "types": "dist/index.d.ts",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "require": "./dist/index.js",
+      "import": "./dist/index.mjs"
+    },
+    "./client": {
+      "types": "./client.d.ts"
+    }
+  },
+  "scripts": {
+    "build": "tsup"
+  },
   "devDependencies": {
-    "@types/node": "^18.16.3"
+    "@types/node": "^18.16.3",
+    "tsup": "^6.7.0"
   }
 }
